--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -627,15 +627,23 @@ background: linear-gradient(to left, #fbc2eb , #fad0c4, #ff9a9e);
 
 
 
-.locker  {
-   background-color: #1e1e1e;
-            border-radius: 12px;
-            padding: 16px;
-            display: flex;
-            gap: 16px;
-            width:auto;
-            height: auto;
-        }
+.locker {
+    background-color: #1e1e1e;
+    border-radius: 12px;
+    padding: 16px;
+    display: flex;
+    gap: 16px;
+    width: auto;
+    height: auto;
+
+    /* Centering styles */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
+
 
 
 
