--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -1,4 +1,13 @@
-
+.downloadContainer{
+       position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
+  display: none; /* Initially hidden */
+}
+    }
  .locker-banner {
       position: relative;
       width: 100%;
