--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -2,11 +2,13 @@
        position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 9999;
   display: none; /* Initially hidden */
-}
+       opacity: 0;
+       position: fixed; 
+     
+       transform-origin: center; 
+       transform: translate(-50%, -50%) scale(0.7);
     }
  .locker-banner {
       position: relative;
