--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -22,10 +22,7 @@
       width: 100%;
       height: auto;
       display: block;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 20px;
-    }
-
+border-radius: 10px 10px 20px 20px;
     /* App icon over the banner */
     .locker-icon {
       position: absolute;
