--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -20,7 +20,15 @@
   opacity: 1;
   transform: translate(-50%, -50%) scale(1);
 }
-
+ .locker  {
+   background-color: #1e1e1e;
+            border-radius: 12px;
+            padding: 16px;
+            display: flex;
+            gap: 16px;
+            width:auto;
+            height: auto;
+        }
 .locker-banner {
   position: relative;
   width: 100%;
