--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -4,7 +4,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0.7);
-    background-color: #fff;
+    background-color: #1e1e1e;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
