--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -6,7 +6,6 @@
     transform: translate(-50%, -50%) scale(0.7);
     padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     z-index: 1000;
     opacity: 0;
     transition: all 0.3s ease-in-out;
@@ -18,6 +17,14 @@
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
 }
+    .locker {
+            background-color: #1e1e1e;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 300px;
+        }
 
 .popup-container h2 {
     color: #2196F3;
