--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -17,7 +17,17 @@
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
 }
-    .locker {
+            .style-locker {
+background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
+  width: auto;
+  height: auto;
+  margin: 2rem 0; /* Adds space above and below */
+  padding: 5px;
+  border-radius: 1rem;
+  overflow: visible;
+  position: relative;
+  z-index: 1;
+} .locker {
             background-color: #1e1e1e;
             padding: 30px;
             border-radius: 8px;
