--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -3,8 +3,8 @@
      position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: auto;
+            height: auto;
             background-color: rgba(0, 0, 0, 0.5);
             display: none;
             justify-content: center;
@@ -26,8 +26,8 @@ background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
   border-radius: 1rem;
   overflow: visible;
   position: relative;
-  z-index: 1;
-} .locker {
+} 
+.locker {
             background-color: #1e1e1e;
             padding: 30px;
             border-radius: 8px;
