--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -1,13 +1,22 @@
 /* Popup Container Styles */
 .popup-container {
     
+  position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
             display: none;
-}
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
 
 .popup-container.active {
-    display: block;
+   display: flex;
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
 }
             .style-locker {
 background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
