--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -27,6 +27,7 @@ background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
   border-radius: 1rem;
   overflow: visible;
   position: relative;
+  z-index: 1;
 } 
 .locker {
            background-color: #1e1e1e;
