--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -25,7 +25,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
             text-align: center;
-            width: 300px;
+            width: 100%;
         }
 .popup-container h2 {
     color: #2196F3;
